updated the readme